--- a/app/.project
+++ b/app/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Libreria-cibops-app</name>
+	<name>app</name>
 	<comment>Project Libreria-cibops-app created by Buildship.</comment>
 	<projects>
 	</projects>
