--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Ignore Gradle project-specific cache directory
 .gradle
+/bin
+
+
+### STS ###
+
+.project
+.classpath
+.settings
 
 # Ignore Gradle build output directory
 build
